rlang/tests/tests_resources/invalid_tests/invalid_option.rlang
Option test:
    init 1 == 1
        if has_iron:
            Execute
    until at_workshop2

Option test1:
    init not 1 == 1
        Find use
    until at_workshop2

Option test2:
        Execute go
    until at_workshop

Option test3:
    init True
        Execute go
        Find